LaTeX output works
LaTeX output works now, though now the automatic previewer display.

--- a/tex/proofs1.tex
+++ b/tex/proofs1.tex
@@ -1,5 +1,6 @@
-\documentclass[a4paper]{article}
+\documentclass{article}
 
+\usepackage[a2paper]{geometry}
 \usepackage{proof}
 \usepackage{latexsym}
 \usepackage{palatino}
